docs/mod/fabric/1.18.1/辅助类/体验提升.md
# 体验提升

## 综合

| 英文名（CurseForge）                                                | 中文名（MCMOD）                                   | 相关链接 | 备注           |
| ------------------------------------------------------------------- | ------------------------------------------------- | -------- | -------------- |
| [Effective](https://www.curseforge.com/minecraft/mc-mods/effective) | [Effective](https://www.mcmod.cn/class/5293.html) |          | 视听觉体验提升 |

## 视觉

| 英文名（CurseForge）                                                                                | 中文名（MCMOD）                                                 | 相关链接 | 备注                                                     |
| --------------------------------------------------------------------------------------------------- | --------------------------------------------------------------- | -------- | -------------------------------------------------------- |
| [Interactic](https://www.curseforge.com/minecraft/mc-mods/interactic)                               | [Interactic](https://www.mcmod.cn/class/5338.html)              |          | 类似 [物品物理掉落](https://www.mcmod.cn/class/932.html) |
| [Animatica](https://www.curseforge.com/minecraft/mc-mods/animatica)                                 | [Animatica](https://www.mcmod.cn/class/5315.html)               |          |                                                          |
| [Continuity](https://www.curseforge.com/minecraft/mc-mods/continuity)                               | [Continuity](https://www.mcmod.cn/class/4906.html)              |          |                                                          |
| [Custom Entity Models (CEM)](https://www.curseforge.com/minecraft/mc-mods/custom-entity-models-cem) | [自定义实体模型](https://www.mcmod.cn/class/4138.html)          |          |                                                          |
| [LambdaBetterGrass](https://www.curseforge.com/minecraft/mc-mods/lambdabettergrass)                 | [Lambda的更好的草方块](https://www.mcmod.cn/class/4238.html)    |          |                                                          |
| [Lava Clear View (Fabric)](https://www.curseforge.com/minecraft/mc-mods/lava-clear-view-fabric)     | [熔岩下清晰视野](https://www.mcmod.cn/class/5080.html)          |          |                                                          |
| [Falling Leaves (Fabric)](https://www.curseforge.com/minecraft/mc-mods/falling-leaves-fabric)       | [Falling Leaves (Fabric)](https://www.mcmod.cn/class/4421.html) |          | 添加了落叶的粒子效果                                     |
| [Low Fire](https://www.curseforge.com/minecraft/mc-mods/low-fire)                                   |                                                                 |          | 着火时动画变小                                           |
| [Borderless Mining](https://www.curseforge.com/minecraft/mc-mods/borderless-mining)                 | [Borderless Mining](https://www.mcmod.cn/class/5388.html)       |          | 无边框全屏                                               |
| [CameraOverhaul](https://www.curseforge.com/minecraft/mc-mods/cameraoverhaul)                       | [Camera Overhaul](https://www.mcmod.cn/class/5371.html)         |          |                                                          |
| [Wavey Capes](https://www.curseforge.com/minecraft/mc-mods/waveycapes)                              | [飘扬披风](https://www.mcmod.cn/class/4617.html)                |          |                                                          |
| [Illuminations](https://www.curseforge.com/minecraft/mc-mods/illuminations)                         | [Illuminations](https://www.mcmod.cn/class/1677.html)           |          |                                                          |
| [Fabulous Clouds [FABRIC]](https://www.curseforge.com/minecraft/mc-mods/fabulous-clouds)            |                                                                 |          | 更好看的云                                               |
| [Spyglass Improvements](https://www.curseforge.com/minecraft/mc-mods/spyglass-improvements)         |                                                                 |          | 改良望远镜                                               |

### 动作

| 英文名（CurseForge）                                                                                       | 中文名（MCMOD）                                               | 相关链接 | 备注             |
| ---------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------- | -------- | ---------------- |
| [First-person Model (Forge/Fabric)](https://www.curseforge.com/minecraft/mc-mods/first-person-model)       | [更真实的第一人称模型](https://www.mcmod.cn/class/4391.html)  |          |                  |
| [Not Enough Animations (Forge/Fabric)](https://www.curseforge.com/minecraft/mc-mods/not-enough-animations) | [Not Enough Animations](https://www.mcmod.cn/class/4378.html) |          | 更多动作动画     |
| [Better Third Person](https://www.curseforge.com/minecraft/mc-mods/better-third-person)                    | [Better Third Person](https://www.mcmod.cn/class/3492.html)   |          | 第三人称视角优化 |

## 听觉

| 英文名（CurseForge）                                                                                                          | 中文名（MCMOD）                                                         | 相关链接                                                   | 备注                               |
| ----------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------- | ---------------------------------------------------------- | ---------------------------------- |
| [Sound Physics Remastered](https://www.curseforge.com/minecraft/mc-mods/sound-physics-remastered)                             |                                                                         |                                                            |                                    |
| [Pling](https://www.curseforge.com/minecraft/mc-mods/pling)                                                                   |                                                                         |                                                            | 游戏加载完毕之后播放音效           |
| [Extreme sound muffler (Fabric) Official](https://www.curseforge.com/minecraft/mc-mods/extreme-sound-muffler-fabric-official) | [ExtremeSoundMuffler](https://www.mcmod.cn/class/5533.html)             |                                                            |                                    |
| [Presence Footsteps](https://www.curseforge.com/minecraft/mc-mods/presence-footsteps)                                         | [脚步声](https://www.mcmod.cn/class/4753.html)                          |                                                            |                                    |
| [Drip Sounds (Fabric)](https://www.curseforge.com/minecraft/mc-mods/dripsounds-fabric)                                        |                                                                         | [Modrinth](https://www.modrinth.com/mod/dripsounds-fabric) |                                    |
| [Bad Wither No Cookie - Reloaded [Fabric]](https://www.curseforge.com/minecraft/mc-mods/bad-wither-no-cookie-reloaded-fabric) | [Bad Wither No Cookie - Reloaded](https://www.mcmod.cn/class/1742.html) |                                                            | 可以让某些讨厌的声音不再远处能听见 |

## 机制

| 英文名（CurseForge）                                                                                  | 中文名（MCMOD）                                             | 相关链接 | 备注                                                        |
| ----------------------------------------------------------------------------------------------------- | ----------------------------------------------------------- | -------- | ----------------------------------------------------------- |
| [Client Tweaks (Fabric Edition)](https://www.curseforge.com/minecraft/mc-mods/client-tweaks-fabric)   | [客户端微调](https://www.mcmod.cn/class/2012.html)          |          |                                                             |
| [Attribute Fix {FABRIC}](https://www.curseforge.com/minecraft/mc-mods/attribute)                      | [属性修复 - Fabric版](https://www.mcmod.cn/class/3225.html) |          |                                                             |
| [CleanCut](https://www.curseforge.com/minecraft/mc-mods/cleancut)                                     | [干净利落](https://www.mcmod.cn/class/3455.html)            |          | [穿草攻击](https://www.mcmod.cn/class/1465.html) 精神继承者 |
| [Crawl (Fabric)](https://www.curseforge.com/minecraft/mc-mods/crawl)                                  |                                                             |          | 添加爬行动作                                                |
| [Fixed Waterlogging](https://www.curseforge.com/minecraft/mc-mods/fixed-waterlogging)                 |                                                             |          | 更多含水方块                                                |
| [Pretty Beaches (Fabric Edition)](https://www.curseforge.com/minecraft/mc-mods/pretty-beaches-fabric) | [漂亮的沙滩](https://www.mcmod.cn/class/2723.html)          |          | 河边挖沙自动填水                                            |

## 其它

| 英文名（CurseForge）                                                                                | 中文名（MCMOD）                                        | 相关链接                                             | 备注     |
| --------------------------------------------------------------------------------------------------- | ------------------------------------------------------ | ---------------------------------------------------- | -------- |
| [Dynamic FPS](https://www.curseforge.com/minecraft/mc-mods/dynamic-fps)                             | [动态FPS](https://www.mcmod.cn/class/3074.html)        | [Modrinth](https://www.modrinth.com/mod/dynamic-fps) |          |
| [FPS Reducer](https://www.curseforge.com/minecraft/mc-mods/fps-reducer)                             | [FPS减速器](https://www.mcmod.cn/class/1815.html)      |                                                      |          |
| [FTB Ultimine (Forge)](https://www.curseforge.com/minecraft/mc-mods/ftb-ultimine-forge)             | [连锁破坏](https://www.mcmod.cn/class/3004.html)       |                                                      | 连锁挖矿 |
| > [Ultimine Integration](https://www.curseforge.com/minecraft/mc-mods/ultimine-integration)         |                                                        |                                                      |          |
| [Diggus Maximus](https://www.curseforge.com/minecraft/mc-mods/diggus-maximus)                       | [连锁挖掘](https://www.mcmod.cn/class/3080.html)       |                                                      |          |
| [Draggable Resource Packs](https://www.curseforge.com/minecraft/mc-mods/draggable-resource-packs)   | [可拖动资源包](https://www.mcmod.cn/class/4654.html)   |                                                      |          |
| [Right Click Clear](https://www.curseforge.com/minecraft/mc-mods/right-click-clear)                 | [右键文本清除](https://www.mcmod.cn/class/2904.html)   |                                                      |          |
| [TrashSlot (Fabric Edition)](https://www.curseforge.com/minecraft/mc-mods/trashslot-fabric-edition) | [生存背包垃圾桶](https://www.mcmod.cn/class/1893.html) |                                                      |          |

## 隐藏与冲突

| 英文名（CurseForge）                                                                                                      | 中文名（MCMOD） | 相关链接 | 备注                               |
| ------------------------------------------------------------------------------------------------------------------------- | --------------- | -------- | ---------------------------------- |
| [[FABRIC] Disable Custom Worlds Advice](https://www.curseforge.com/minecraft/mc-mods/fabric-disable-custom-worlds-advice) |                 |          | 禁用加载世界时烦人的实验性功能提示 |

## 按键

| 英文名（CurseForge）                                                                                    | 中文名（MCMOD）                                  | 相关链接 | 备注 |
| ------------------------------------------------------------------------------------------------------- | ------------------------------------------------ | -------- | ---- |
| [Just Enough Keys [JEK] [Fabric]](https://www.curseforge.com/minecraft/mc-mods/just-enough-keys-fabric) |                                                  |          |      |
| [Mouse Tweaks](https://www.curseforge.com/minecraft/mc-mods/mouse-tweaks)                               | [鼠标手势](https://www.mcmod.cn/class/1162.html) |          |      |

## 联机

| 英文名（CurseForge）                                                                      | 中文名（MCMOD）                                          | 相关链接                                       | 备注 |
| ----------------------------------------------------------------------------------------- | -------------------------------------------------------- | ---------------------------------------------- | ---- |
| [LAN World Plug-n-Play](https://www.curseforge.com/minecraft/mc-mods/mcwifipnp)           | [更高级联机设置](https://www.mcmod.cn/class/4498.html)   | [Modrinth](https://modrinth.com/mod/mcwifipnp) |      |
| [LanServerProperties](https://www.curseforge.com/minecraft/mc-mods/lan-server-properties) | [自定义局域网联机](https://www.mcmod.cn/class/2754.html) |                                                |      |

## 中文玩家特供

| 英文名（CurseForge）                                                            | 中文名（MCMOD）                                        | 相关链接 | 备注 |
| ------------------------------------------------------------------------------- | ------------------------------------------------------ | -------- | ---- |
| [IMBlockerFabric](https://www.curseforge.com/minecraft/mc-mods/imblockerfabric) | [输入法冲突修复](https://www.mcmod.cn/class/2840.html) |          |      |
